[gd_scene format=3 uid="uid://dcydko4pj7kon"]

[ext_resource type="Script" uid="uid://cbxqw0d3dgdka" path="res://Scripts/Inventory/inv_ui.gd" id="1_605em"]
[ext_resource type="PackedScene" uid="uid://c6ec25ku74hsc" path="res://Scenes/Inventory/inv_ui_slot.tscn" id="2_actet"]
[ext_resource type="Texture2D" uid="uid://cdc8agr2jneqy" path="res://Assets/wood_panel.png" id="3_ckuei"]
[ext_resource type="Script" uid="uid://dd4tegq5mxmbk" path="res://Scripts/Inventory/Tooltip_interact.gd" id="4_bht28"]
[ext_resource type="PackedScene" uid="uid://con22tiqm0ejg" path="res://Scenes/Inventory/tooltip.tscn" id="5_e1ndk"]

[node name="Inv_UI" type="Control" unique_id=1060209723]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2560.0
offset_bottom = -1440.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_605em")

[node name="InvBG" type="Sprite2D" parent="." unique_id=1211621255]
position = Vector2(0.49998283, -1.4999981)
scale = Vector2(11.020831, 9.979166)
texture = ExtResource("3_ckuei")

[node name="InvSlotHolder" type="Control" parent="." unique_id=1202137764]
anchors_preset = 0

[node name="Inv_UI_slot" parent="InvSlotHolder" unique_id=1448245104 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = -50.0
offset_top = -185.0
offset_right = -50.0
offset_bottom = -185.0

[node name="Inv_UI_slot2" parent="InvSlotHolder" unique_id=263901468 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = 100.0
offset_top = -125.0
offset_right = 100.0
offset_bottom = -125.0

[node name="Inv_UI_slot3" parent="InvSlotHolder" unique_id=239041211 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = 100.0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 25.0

[node name="Inv_UI_slot4" parent="InvSlotHolder" unique_id=1506550453 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = -50.0
offset_top = 85.0
offset_right = -50.0
offset_bottom = 85.0

[node name="Inv_UI_slot5" parent="InvSlotHolder" unique_id=2135591356 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = -200.0
offset_top = 25.0
offset_right = -200.0
offset_bottom = 25.0

[node name="Inv_UI_slot6" parent="InvSlotHolder" unique_id=2044267936 instance=ExtResource("2_actet")]
layout_mode = 0
offset_left = -200.0
offset_top = -125.0
offset_right = -200.0
offset_bottom = -125.0

[node name="InvButtonHolder" type="Control" parent="." unique_id=8137084]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button1" type="Button" parent="InvButtonHolder" unique_id=1440298394]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -50.0
offset_top = -183.0
offset_right = 50.0
offset_bottom = -85.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button1" unique_id=658008637 instance=ExtResource("5_e1ndk")]
layout_mode = 0

[node name="Button2" type="Button" parent="InvButtonHolder" unique_id=1977666538]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 100.0
offset_top = -124.0
offset_right = 200.0
offset_bottom = -26.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button2" unique_id=1755676734 instance=ExtResource("5_e1ndk")]
layout_mode = 0

[node name="Button3" type="Button" parent="InvButtonHolder" unique_id=521281197]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 100.0
offset_top = 26.0
offset_right = 200.0
offset_bottom = 124.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button3" unique_id=453251746 instance=ExtResource("5_e1ndk")]
layout_mode = 0

[node name="Button4" type="Button" parent="InvButtonHolder" unique_id=1907959182]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -49.0
offset_top = 86.0
offset_right = 51.0
offset_bottom = 184.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button4" unique_id=1266289372 instance=ExtResource("5_e1ndk")]
layout_mode = 0
offset_right = 300.0

[node name="Button5" type="Button" parent="InvButtonHolder" unique_id=1112346893]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -200.0
offset_top = 26.0
offset_right = -100.0
offset_bottom = 124.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button5" unique_id=884871886 instance=ExtResource("5_e1ndk")]
layout_mode = 0
offset_right = 300.0

[node name="Button6" type="Button" parent="InvButtonHolder" unique_id=1869288458]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -200.0
offset_top = -123.0
offset_right = -100.0
offset_bottom = -25.0
script = ExtResource("4_bht28")

[node name="Tooltip" parent="InvButtonHolder/Button6" unique_id=1012140360 instance=ExtResource("5_e1ndk")]
layout_mode = 0
offset_right = 300.0

[connection signal="pressed" from="InvButtonHolder/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="InvButtonHolder/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="InvButtonHolder/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="InvButtonHolder/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="InvButtonHolder/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="InvButtonHolder/Button6" to="." method="_on_button_6_pressed"]
